--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<p>Lorem <span id="_tooltipCheck">HoverMe!</span> ipsum dolor sit <span id="tooltip">Привет</span>, consectetur adipisicing <span id="tooltip2">Еще привет</span>. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, odit.  perspiciatis quod tempore?</p>
+<p>Lorasdasdasdem <span id="_tooltipCheck">HoverMe!</span> ipsum dolor sit <span id="tooltip">Привет</span>, consectetur adipisicing <span id="tooltip2">Еще привет</span>. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, odit.  perspiciatis quod tempore?</p>
 
 <p>Lorem ipsum dolor <span id="qwe">sit</span> amet, consectetur adipisicing elit. Aut corporis doloremque dolores est, facere nam, necessitatibus nesciunt nobis nulla obcaecati perspiciatis sit, unde voluptates. Accusamus accusantium, culpa eligendi nemo neque non nostrum perferendis porro quaerat quo reprehenderit, sed, voluptates! Adipisci aspernatur commodi cum distinctio et fuga in, inventore iusto maxime non officia porro quaerat quidem quo voluptatum! A adipisci dicta dignissimos dolorem, dolorum expedita incidunt ipsa iste magnam, maiores, minima officia quod voluptatibus! Accusantium aut error fugiat illum nostrum officia omnis optio, quae tenetur veniam. Consequuntur fuga, illum, ipsam itaque, minus optio pariatur possimus qui quibusdam reiciendis repellendus ut voluptas.</p>
 <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, adipisci?</h2>
